Added clipboard function.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
           <input
             type="button"
             onclick="generatePassword(16);"
-            value="Get password!"
+            value="Create password!"
+          /><br />
+          <input
+            type="button"
+            onclick="clipPassword();"
+            value="Copy to clipboard!"
           />
         </div>
       </div>
