--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Password Generator</title>
 
     <script type="text/javascript" src="assets/scripts/script.js"></script>
-    <link type="text/css" href="assets/css/styles.css" />
+    <link type="text/css" rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
     <header><h1>Password Generator</h1></header>
