Added styles, spoofed up HTML and made some javascript improvements.

--- a/index.html
+++ b/index.html
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Password Generator</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<title>Password Generator</title>
 
-    <script type="text/javascript" src="assets/scripts/script.js"></script>
-    <link type="text/css" rel="stylesheet" href="assets/css/styles.css" />
-  </head>
-  <body>
-    <header><h1>Password Generator</h1></header>
-
-    <main>
-      <div class="header">
-        <h1>Generate a password</h1>
-      </div>
-      <div class="main">
-        <div class="borderBox">
-          <h2>Your new password:</h2>
-          <textarea id="passwordText"></textarea><br />
-          <input
-            type="button"
-            onclick="generatePassword(16);"
-            value="Create password!"
-          /><br />
-          <input
-            type="button"
-            onclick="clipPassword();"
-            value="Copy to clipboard!"
-          />
-        </div>
-      </div>
-    </main>
-  </body>
+		<script type="text/javascript" src="assets/scripts/script.js"></script>
+		<link type="text/css" rel="stylesheet" href="assets/css/styles.css" />
+	</head>
+	<body>
+		<div class="header">
+			<h1>Password Generator</h1>
+		</div>
+		<div class="main">
+			<div class="borderBox">
+				<h2>Generate a Password</h2>
+				<textarea
+					id="passwordText"
+					placeholder="Your Secure Password"
+					rows="5"
+				></textarea>
+				<div id="buttons">
+					<input
+						type="button"
+						id="buttonGetPassword"
+						onclick="generatePassword(16);"
+						value="Create password!"
+					/>
+					<input
+						type="button"
+						id="buttonClipboard"
+						onclick="clipPassword();"
+						value="Copy to clipboard!"
+					/>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
