--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<input
 						type="button"
 						id="buttonGetPassword"
-						onclick="generatePassword(16);"
+						onclick="generatePassword();"
 						value="Create password!"
 					/>
 					<input
